# BURSAR

./: Cargo.toml
.claude/: CLAUDE.md  settings.local.json
.githooks/: pre-commit
.github/workflows/: release.yml
specs/: architecture.md  handoff-generation-prompt.md  handoff.md  implementation-protocols.md  phase-3.md  phase-5.md  phase-6.md  progress.md  type-system.md
specs/guide/: user-guide.md
specs/summaries/: v2-summary.md
specs/v1/: SPEC.md  boundaries.md  data-model.md  phase-1.md  phase-2a.md  phase-2b.md  phase-4.md  progress.md  v1-handoff.md
specs/v2/: v2-SPEC.md  v2-architecture.md  v2-boundaries.md  v2-data-model.md  v2-phase-1.md  v2-phase-2.md  v2-phase-3.md  v2-progress.md  v2-type-system.md
specs/v2.1/: task-1-rename.md  task-2-startup-screen.md  task-3-entity-management.md  task-4-update-check.md  v2.1-build-spec.md
specs/v2.2/: v2.2-SPEC.md  v2.2-phase-1.md  v2.2-phase-2.md  v2.2-phase-3.md  v2.2-progress.md
specs/v3/: v3-SPEC.md  v3-bugfixes.md  v3-phase-1.md  v3-phase-2.md  v3-phase-3.md  v3-phase-4.md  v3-progress.md
specs/v4/: v4-SPEC.md  v4-bugfixes-r3.md  v4-bugfixes-r4.md  v4-bugfixes.md  v4-phase-1.md  v4-phase-2.md  v4-phase-3.md  v4-phase-4.md  v4-phase-5.md  v4-progress.md
specs/v5/: v5-SPEC.md  v5-phase-1.md  v5-phase-2.md  v5-phase-3.md  v5-progress.md
src/: app.rs  config.rs  integration_tests.rs  lib.rs  main.rs  startup.rs  startup_screen.rs  tax_ingestion.rs  update.rs
src/ai/: client.rs  context.rs  csv_import.rs  mod.rs  tax_context.rs  tools.rs
src/app/: ai_handler.rs  import_handler.rs  key_dispatch.rs  (+2 more)
(+64 files in other folders)
