[package]
name = "bursar"
version = "0.6.0"
edition = "2024"
repository = "https://github.com/trout-dev-fwd/bursar"
homepage = "https://github.com/trout-dev-fwd/bursar"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
csv = "1"
ureq = { version = "2", features = ["json"] }
toml_edit = "0.25"
semver = "1"
sha2 = "0.10"
urlencoding = "2"
scraper = "0.22"
